# crypto_stream

./: .env_example  .gitignore  .pre-commit-config.yaml  LICENSE.md  Makefile  NOTES.md  README.md  docker-compose.yml  pyproject.toml
crypto_stream/flink/: Dockerfile  analysis.py  download_libs.sh  job_manager.py  models.py  pyproject.toml  server.py
crypto_stream/k8s/: flink-deployment.yaml  ingress.yaml  kafka-broker.yaml  kafka-deployment.yaml  logger-deployment.yaml  spark-deployment.yaml  streamlit-deployment.yaml
crypto_stream/kafka/: Dockerfile  models.py  pyproject.toml  server.py  stream_manager.py  websocket_manager.py
crypto_stream/kube/: minikube.py
crypto_stream/logger/: Dockerfile  pyproject.toml  server.py
crypto_stream/shared/: constants.py  logging_client.py
crypto_stream/spark/: Dockerfile  analysis.py  models.py  pyproject.toml  server.py  spark_job_manager.py
crypto_stream/streamlit/: Dockerfile  pyproject.toml  server.py
crypto_stream/utils/: __init__.py  logger.py
k8s/: streamlit-deployment.yaml
