[tool.poetry]
name = "tweets"
version = "0.1.0"
description = "Simple Python project built with Poetry."
authors = ["yongkheehou <yongkheehou@gmail.com>"]
maintainers = ["Yong Khee Hou <yongkheehou@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/yongkheehou/crypto_stream/"
repository = "https://github.com/yongkheehou/crypto_stream/"
documentation = "https://github.com/yongkheehou/crypto_stream/"
keywords = ["FastAPI",
            "Nginx",
            "Kafka",
            "Flink",
            "AdalFlow",
            "Streamlit",
            "Elasticsearch",
            "Kibana",
            "Docker",
            "Kubernetes"]

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.dev-dependencies]
pytest = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
