[tool.poetry]
name = "crypto-stream-flink"
version = "0.1.0"
description = "Flink service for crypto streaming platform"
authors = ["yongkheehou <yongkheehou@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
pydantic = "^2.5.2"
httpx = "^0.26.0"
apache-flink = "1.19.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
