[tool.poetry]
name = "crypto-stream-logger"
version = "0.1.0"
description = "Centralized logging service for crypto stream platform"
authors = ["yongkheehou <yongkheehou@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
pydantic = "^2.5.2"
httpx = "^0.26.0"  # For making HTTP requests

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
