[tool.poetry]
name = "crypto-stream-streamlit"
version = "0.1.0"
description = "Streamlit service for crypto streaming platform"
authors = ["yongkheehou <yongkheehou@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
pydantic = "^2.5.2"
streamlit = "^1.29.0"
httpx = "^0.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
